convert-website-to-nuxt: -navbar active states -hero baner for pages -alignment fixes for navbar

--- a/assets/scss/global/_navbar.scss
+++ b/assets/scss/global/_navbar.scss
@@ -5,12 +5,16 @@
   height: $navbar-height;
   background-color: white;
   z-index: 100;
+  text-align: left;
   .uk-button {
+    position: absolute;
     padding: 0 10px;
     width: 40px;
     left: 0;
   }
   .navbar-title {
     line-height: $navbar-height;
+    margin-left: $navbar-height;
+    padding-left: 1em;
   }
 }
